--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -56,7 +56,7 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        role-to-assume: arn:aws:iam::166636590623:role/aws-service-role/ecs.amazonaws.com/AWSServiceRoleForECS
+        role-to-assume: arn:aws:iam::166636590623:role/Gitgub-actions
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
