--- a/appspec.yml
+++ b/appspec.yml
@@ -1,7 +1,7 @@
 version: 0.0
 os: linux
 hooks:
-#  ApplicationStop:
+  ApplicationStop:
 #    - location: scripts/stop_server.sh
 #      timeout: 300
   BeforeInstall:
