--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 hooks:
   ApplicationStop:
-#    - location: scripts/stop_server.sh
+    - location: scripts/stop_server.sh
 #      timeout: 300
   BeforeInstall:
     - location: scripts/install_dependencies.sh
