--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,9 +18,9 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Run tests with Maven
         env:
-          amazon.aws.accessKeyId: ${{secrets.AWS_ACCESS_KEY_ID}}
-          secretAccessKey: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          region: ${{secrets.AWS_REGION}}
-          endpoint: ${{secrets.AWS_ENDPOINT}}
+          AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          DYNAMODB_ENDPOINT: ${{ secrets.AWS_ENDPOINT }}
         run: mvn -B test --file pom.xml
 
