--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,10 @@ spring:
   config:
     import: optional:secrets.yml
 
-amazon:
-  aws:
-    accessKeyId: ${AWS_ACCESS_KEY_ID}
-    secretAccessKey: ${AWS_SECRET_ACCESS_KEY}
-  dynamodb:
-    region: ${AWS_REGION}
-    endpoint: ${AWS_ENDPOINT}
+#amazon:
+#  aws:
+#    accessKeyId: ${AWS_ACCESS_KEY_ID}
+#    secretAccessKey: ${AWS_SECRET_ACCESS_KEY}
+#  dynamodb:
+#    region: ${AWS_REGION}
+#    endpoint: ${AWS_ENDPOINT}
