--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -6,22 +6,27 @@ jobs:
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v2
+
       - name: Set up JDK 17
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'
           java-version: 17
+
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+          restore-keys: |
+            ${{ runner.os }}-m2
+
       - name: Print environment variables
         env:
-          amazon.aws.accessKeyId: ${{ secrets.AWS_REGION }}
-        run: | 
-          echo "${{ secrets.AWS_REGION }}"
-          echo "amazon.dynamodb.endpoint: $amazon.dynamodb.endpoint"
+          dynamodb_endpoint: ${{ secrets.AWS_ENDPOINT }}
+        run: |
+          echo "DynamoDB Endpoint: $dynamodb_endpoint"
+
       - name: Run tests with Maven
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
