--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,13 @@
 spring:
   config:
     import: optional:secrets.yml
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_OAUTH2_CLIENT_ID}
+            client-secret: ${GOOGLE_OAUTH2_CLIENT_SECRET}
 
 amazon:
   aws:
@@ -9,3 +16,8 @@ amazon:
   dynamodb:
     region: ${AWS_REGION}
     endpoint: ${AWS_ENDPOINT}
+logging:
+  level:
+    org:
+      springframework:
+        security: TRACE
