added current branch to test

--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+      - 91-setup-github-workflow-for-fly-cicd
     paths:
       - 'src/**'
       - '.github/**'
