--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -10,13 +10,20 @@ on:
       - 'Dockerfile'
 
 jobs:
+  user-check:
+    name: Who am i
+    runs-on: ubuntu-latest
+    steps:
+      FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      env:
+      - run: fly auth whoami
+
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: fly auth whoami
       - run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
