--- a/.github/workflows/whoami.yml
+++ b/.github/workflows/whoami.yml
@@ -1,4 +1,5 @@
-name: Fly Deploy
+name: Fly Auth
+
 on:
   push:
     branches:
@@ -10,12 +11,12 @@ on:
       - 'Dockerfile'
 
 jobs:
-  deploy:
-    name: Deploy app
+  user-check:
+    name: Who am I
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only
+      - run: flyctl auth whoami
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
