--- a/.github/workflows/whoami.yml
+++ b/.github/workflows/whoami.yml
@@ -17,6 +17,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl auth whoami
+      - run: flyctl auth login
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
