--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -11,3 +11,4 @@ spring:
     hibernate:
       ddl-auto: update   # Set to 'update' to create/update database schema
     show-sql: true      # Show SQL queries in logs
+    defer-datasource-initialization: true
