--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,14 +1,25 @@
+server:
+  address: 0.0.0.0
+  port: 8080
 spring:
+  config:
+    import: optional:secrets.yml
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_OAUTH2_CLIENT_ID}
+            client-secret: ${GOOGLE_OAUTH2_CLIENT_SECRET}
   datasource:
-    driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:testdb
-    username: sa
-    password:   # You can set your preferred password
-  h2:
-    console:
-      enabled: true      # Enable H2 console for development
+    url: ${DATABASE_URL}   # JDBC URL for PostgreSQL
+    username: ${DATABASE_USER}
+    password: ${DATABASE_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: update   # Set to 'update' to create/update database schema
-    show-sql: true      # Show SQL queries in logs
+      ddl-auto: create-drop        # Automatically create/update database schema
+    show-sql: true    # Show SQL queries in logs
     defer-datasource-initialization: true
+  sql:
+    init:
+      mode: always
