--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,10 @@ spring:
     hibernate:
       ddl-auto: create-drop        # Automatically create/update database schema
     show-sql: true    # Show SQL queries in logs
+    defer-datasource-initialization: true
+  sql:
+    init:
+      mode: always
   profiles:
     default: deploy
 
