--- a/client/package.json
+++ b/client/package.json
@@ -20,11 +20,18 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^3.1.2",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.4"
   }
 }
