changed create drop to create

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     password: ${DATABASE_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: create-drop        # Automatically create/update database schema
+      ddl-auto: create        # Automatically create/update database schema
     show-sql: true    # Show SQL queries in logs
     defer-datasource-initialization: true
   sql:
