--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -12,18 +12,22 @@ spring:
     driverClassName: org.h2.Driver
     url: jdbc:h2:mem:testdb
     username: sa
-    password:   # You can set your preferred password
+    password:
   h2:
     console:
-      enabled: true      # Enable H2 console for development
+      enabled: true
   jpa:
     hibernate:
-      ddl-auto: update   # Set to 'update' to create/update database schema
-    show-sql: true      # Show SQL queries in logs
+      ddl-auto: create
+    show-sql: true
     defer-datasource-initialization: true
   sql:
     init:
       mode: always
   profiles:
     default: test
-
+#logging:
+#  level:
+#    org:
+#      springframework:
+#        security: TRACE
