--- a/client/package.json
+++ b/client/package.json
@@ -30,8 +30,8 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
-  
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.4.10",
     "@types/js-cookie": "^3.0.4"
   }
 }
