--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -16,7 +16,7 @@ spring:
     password: ${DATABASE_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: create-drop        # Automatically create/update database schema
+      ddl-auto: create        # Automatically create/update database schema
     show-sql: true    # Show SQL queries in logs
     defer-datasource-initialization: true
   sql:
@@ -25,3 +25,8 @@ spring:
 
 frontend-details:
   base-url: http://localhost:3000/
+logging:
+  level:
+    org:
+      springframework:
+        security: TRACE
