--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -24,7 +24,7 @@ spring:
       mode: always
 
 frontend-details:
-  base-url: http://localhost:3000/
+  base-url: http://localhost:3000
 logging:
   level:
     org:
