--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -27,9 +27,9 @@ spring:
   profiles:
     default: test
 frontend-details:
-  base-url: http://localhost:3000/
+  base-url: http://localhost:3000
 backend-details:
-  base-url: http://localhost:8080/
+  base-url: http://localhost:8080
 #logging:
 #  level:
 #    org:
