--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -11,7 +11,7 @@ spring:
             client-id: ${GOOGLE_OAUTH2_CLIENT_ID}
             client-secret: ${GOOGLE_OAUTH2_CLIENT_SECRET}
   datasource:
-    url: ${DATABASE_URL_DEV}   # JDBC URL for PostgreSQL
+    url: ${DATABASE_URL}   # JDBC URL for PostgreSQL
     username: ${DATABASE_USER}
     password: ${DATABASE_PASSWORD}
   jpa:
