--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,5 +34,5 @@ frontend-details:
   base-url: https://damp-haze-3050.fly.dev/
 #  base-url: http://localhost:3000/
 backend-details:
-#  base-url: https://echoboard-app-dev.fly.dev/
-  base-url: http://localhost:8080/
+  base-url: https://api.echoboard.site/
+#  base-url: http://localhost:8080/
