--- a/.github/workflows/fly-dev.yml
+++ b/.github/workflows/fly-dev.yml
@@ -2,18 +2,12 @@ name: Fly Deploy
 on:
   push:
     branches:
-      - request-to-main
+      - main
     paths:
       - 'src/**'
       - 'Dockerfile'
 
 jobs:
-#  create:
-##    name: Create Package
-##    runs-on: ubuntu-22.04
-##    steps:
-##      TO DO
-##      create jar ile by mvn clean package then use it in the next step to deploy
   deploy:
     name: Deploy app
     runs-on: ubuntu-20.04
