added env variables

--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -16,4 +16,6 @@ jobs:
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: flyctl deploy --app echoboard-app --remote-only
         env:
+          GOOGLE_OAUTH2_CLIENT_ID: ${{ secrets.GOOGLE_OAUTH2_CLIENT_ID }}
+          GOOGLE_OAUTH2_CLIENT_SECRET: ${{ secrets.GOOGLE_OAUTH2_CLIENT_SECRET }}
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
