--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 server:
   address: 0.0.0.0
   port: 8080
+  forward-headers-strategy: native
   servlet:
     session:
       cookie:
-        same-site: none
+        same-site: lax
 spring:
   config:
     import: optional:secrets.yml
