updated workflow to run on pull request

--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -2,6 +2,9 @@ name: Fly Deploy
 on:
   push:
     branches:
+      - main
+  pull_request:
+    branches:
       - deploy
     paths:
       - 'src/**'
