updated test config

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -6,8 +6,8 @@ spring:
       client:
         registration:
           google:
-            client-id: ${GOOGLE_OAUTH2_CLIENT_ID}
-            client-secret: ${GOOGLE_OAUTH2_CLIENT_SECRET}
+            client-id: 1234567890
+            client-secret: secret
   datasource:
     driverClassName: org.h2.Driver
     url: jdbc:h2:mem:testdb
@@ -30,8 +30,3 @@ frontend-details:
   base-url: http://localhost:3000
 backend-details:
   base-url: http://localhost:8080
-#logging:
-#  level:
-#    org:
-#      springframework:
-#        security: TRACE
