--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -2,10 +2,13 @@ name: Fly Deploy
 on:
   push:
     branches:
-      - deploy
+      - main
+    paths:
+      - 'src/**'
+      - 'Dockerfile'
   pull_request:
     branches:
-      - deploy
+      - main
     paths:
       - 'src/**'
       - 'Dockerfile'
