--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,11 +18,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update      # Automatically create/update database schema
-    show-sql: true    # Show SQL queries in logs
     defer-datasource-initialization: true
-  sql:
-    init:
-      mode: always
+#  sql:
+#    init:
+#      mode: always
 
 frontend-details:
   base-url: http://localhost:3000
@@ -31,3 +30,10 @@ logging:
     org:
       springframework:
         security: TRACE
+#      hibernate:
+#        sql: DEBUG
+#        type:
+#          descriptor:
+#            sql:
+#              BasicBinder:
+#                TRACE
