--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.9",
+    "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^4.35.0",
     "@tanstack/react-query-devtools": "^4.35.0",
     "@types/node": "20.5.9",
@@ -29,7 +30,8 @@
     "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.4.10",
