Modififed application-dev

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -22,7 +22,8 @@ logging:
   level:
     org:
       springframework:
-        security: TRACE
+#        security: TRACE
+        messaging: DEBUG
 #      hibernate:
 #        sql: DEBUG
 #        type:
