--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -23,7 +23,7 @@ logging:
     org:
       springframework:
 #        security: TRACE
-        messaging: DEBUG
+        messaging: TRACE
 #      hibernate:
 #        sql: DEBUG
 #        type:
