Implemented the endpoint in UserController that fetches the user with comments, solutions and post

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
     init:
       mode: always
   profiles:
-    default: deploy
+    default: dev
 
 frontend-details:
     base-url: https://app.echoboard.site/
