--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,7 +15,8 @@ spring:
 #  sql:
 #    init:
 #      mode: always
-
+backend-details:
+ base-url: http://localhost:8080/
 frontend-details:
   base-url: http://localhost:3000
 logging:
