--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
+    "react-visibility-sensor": "^5.1.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "websocket": "^1.0.34"
