--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -19,7 +19,7 @@ spring:
 backend-details:
  base-url: http://localhost:8080/
 frontend-details:
-  base-url: http://localhost:3000
+  base-url: http://localhost:3000/
 logging:
   level:
     org:
