Updated websocket url again

--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_API_BASE_URL = https://api.echoboard.site/api/v1
 NEXT_PUBLIC_BASE_URL=https://api.echoboard.site
-NEXT_PUBLIC_DOMAIN = api.echoboard.site
+NEXT_PUBLIC_WEBSOCKET_URL = wss://api.echoboard.site/w
