updated cookie same site to none

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
   servlet:
     session:
       cookie:
-        same-site: lax
+        same-site: none
 spring:
   config:
     import: optional:secrets.yml
