Added some responsive width values to single user posr component to fix the issue of overflowing

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,11 +31,11 @@ spring:
   profiles:
     default: deploy
 frontend-details:
-    base-url: https://app.echoboard.site/
-#  base-url: http://localhost:3000/
+#    base-url: https://app.echoboard.site/
+  base-url: http://localhost:3000/
 backend-details:
-    base-url: https://api.echoboard.site/
-#  base-url: http://localhost:8080/
+#    base-url: https://api.echoboard.site/
+  base-url: http://localhost:8080/
 logging:
   level:
     org:
