--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,17 +25,8 @@ spring:
       ddl-auto: update
     show-sql: false
     defer-datasource-initialization: true
-  sql:
-    init:
-      mode: always
   profiles:
     default: deploy
-frontend-details:
-#    base-url: https://app.echoboard.site/
-  base-url: http://localhost:3000/
-backend-details:
-#    base-url: https://api.echoboard.site/
-  base-url: http://localhost:8080/
 logging:
   level:
     org:
@@ -48,3 +39,9 @@ logging:
 multitenancy:
   http:
     header-name: X-TenantId
+website:
+  base-url:
+    backend: http://localhost:8080/
+#    backend: https://api.echoboard.site/
+    frontend: http://localhost:3000/
+#    frontend: https://app.echoboard.site/
