--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,10 @@ spring:
     username: ${DATABASE_USER}
     password: ${DATABASE_PASSWORD}
   jpa:
+    properties:
+      hibernate:
+        multiTenancy: SCHEMA
+        tenant_identifier_resolver: se.salt.echoboard.multitenancy.data.hibernate.TenantIdentifierResolver
     hibernate:
       ddl-auto: update
     show-sql: false
