added mulit tenancy properties

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,11 +12,10 @@ spring:
     hibernate:
       ddl-auto: none
     show-sql: off
-#    open-in-view: true
-#    defer-datasource-initialization: true
-#  sql:
-#    init:
-#      mode: always
+    properties:
+      hibernate:
+        multiTenancy: SCHEMA
+        tenant_identifier_resolver: se.salt.echoboard.multitenancy.data.hibernate.TenantIdentifierResolver
 backend-details:
  base-url: http://localhost:8080/
 frontend-details:
