--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   address: 0.0.0.0
   port: 8080
-  forward-headers-strategy: native
+  forward-headers-strategy: none
   servlet:
     session:
       cookie:
@@ -25,7 +25,7 @@ spring:
       hibernate:
         multiTenancy: SCHEMA
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: false
     defer-datasource-initialization: true
   profiles:
@@ -44,7 +44,7 @@ multitenancy:
     header-name: X-TenantId
 website:
   base-url:
-#    backend: http://localhost:8080/
-    backend: https://api.echoboard.site/
-#    frontend: http://localhost:3000/
-    frontend: https://app.echoboard.site/
+    backend: http://localhost:8080/
+#    backend: https://api.echoboard.site/
+    frontend: http://localhost:3000/
+#    frontend: https://app.echoboard.site/
