--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   address: 0.0.0.0
   port: 8080
-  forward-headers-strategy: none
+  forward-headers-strategy: native
   servlet:
     session:
       cookie:
